--- a/components/services/provrdf-owl-coverage/html.template
+++ b/components/services/provrdf-owl-coverage/html.template
@@ -141,6 +141,42 @@
 
 
 
+
+
+      <table about="#property-properties" typeof="dcat:Dataset" class="alignment">
+         <caption property="dcterms:description"></caption>
+         <tr>
+            <th>PROV-O Property</th>
+            <th>Functional</th>
+            <th>InverseFunctional</th>
+            <th>Transitive</th>
+            <th>Symmetric</th>
+            <th>Asymmetric</th>
+            <th>Reflexive</th>
+            <th>Irreflexive</th>
+         <tr>
+         {% for row in models.property_properties %} 
+            <tr>
+               <td>{{row.property.curie}}</td>
+               <td>{{row.functional.value}}</td>
+               <td>{{row.inversefunctional.curie}}</td>
+               <td>{{row.transitive.curie}}</td>
+               <td>{{row.symmetric.curie}}</td>
+               <td>{{row.asymmetric.curie}}</td>
+               <td>{{row.reflexive.curie}}</td>
+               <td>{{row.irreflexive.curie}}</td>
+            </tr> 
+         {% endfor %} 
+      </table>
+      <span about="#property-properties">
+         <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/property-properties.query"></a>
+         <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
+      </span>
+
+
+
+
+
       <p>Powered by <a rel="prov:wasAttributedTo" href="https://github.com/timrdf/prov-lodspeakr/tree/master/components/services/provrdf-owl-coverage">prov-lodspeakr</a></p>
    </body> 
 </html>
