--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -190,7 +190,48 @@
       <h2>The PROVO Ontology Description</h2>    	
       <p> We now introduce the classes and properties that constitute the PROV ontology. We first give a textual description of each ontology term, followed by OWL2 syntax representing the ontology term and an example use of the class in the <a href="http://www.w3.org/TR/2011/WD-prov-dm-20111018/#a-file-scenario">provenance scenario</a>.
 	  </p>
-  
+
+      <p>Core classes and properties</p>
+      <div>
+      {% for row in models.core_classes %}
+         <a href="{{row.class.curie}}">{{row.class.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      {% for row in models.core_properties %}
+         <a href="{{row.property.curie}}">{{row.property.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      </div>
+
+      <p>Qualified classes and properties</p>
+      <div>
+      {% for row in models.qualified_classes %}
+         <a href="{{row.class.curie}}">{{row.class.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      {% for row in models.qualified_properties %}
+         <a href="{{row.property.curie}}">{{row.property.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      </div>
+
+      <p>Additional classes and properties</p>
+      <div>
+      {% for row in models.additional_classes %}
+         <a href="{{row.class.curie}}">{{row.class.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      {% for row in models.additional_properties %}
+         <a href="{{row.property.curie}}">{{row.property.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      </div>
+
+      <p>TODO: categorize as "core", "qualified", or "additional" in <a href="http://dvcs.w3.org/hg/prov/raw-file/default/ontology/ProvenanceOntology.owl">ProvenanceOntology.owl</a></p>
+      <div>
+      {% for row in models.uncategorized %}
+         <a href="{{row.prov.curie}}">{{row.prov.curie}}</a>{%if !forloop.last%} | {%endif%}
+      {% endfor %} 
+      </div>
+
+           <img src="diagram-3-1.png"
+          style="width: 70%; min-width: 25em; max-width: 60em" 
+          alt="Class hierarchy of the PROV ontology"/>
+ 
      <section>
 	  	<h3>Simple Relationships in PROV-O</h3>
         <p>        
@@ -198,7 +239,16 @@
         <div class="issue">
         <code>http://www.w3.org/ns/prov/</code> for terms that are common in both models. This is <a href="http://www.w3.org/2011/prov/track/issues/90">ISSUE-90</a>
         </div>
-	  </section>
+
+        <div class="anexample">
+        <div><b>Example</b></div>
+           <p> Example of instances of class Entity from the <a href="http://www.w3.org/TR/2011/WD-prov-dm-20111018/#a-file-scenario"> provenance scenario </a> are files with identifiers <i>e1</i> and <i>e2
+</i>. The RDF/XML syntax for asserting that e1 is an instance of Entity is given below.
+           <div class="exampleOuter">
+            <pre class="example">{% include "eg-9-provrdf-owl-coverage.html.ttl" %}</pre>
+           </div>
+        </div>
+	  </section> <!-- Simple Relationships in PROV-O -->
 
      <section>
 	  	<h3>Qualified Relationships in PROV-O</h3>
@@ -217,6 +267,9 @@
         <code>http://www.w3.org/ns/prov/</code> for terms that are common in both models. This is <a href="http://www.w3.org/2011/prov/track/issues/90">ISSUE-90</a>
         </div>
 	  </section>
+
+
+      {% include "section-3-4.inc.html" %}
 
 	  </section>
 
