--- a/components/services/provrdf-owl-coverage/html.template
+++ b/components/services/provrdf-owl-coverage/html.template
@@ -158,13 +158,13 @@
          {% for row in models.property_properties %} 
             <tr>
                <td>{{row.property.curie}}</td>
-               <td>{{row.functional.curie}}</td>
-               <td>{{row.inversefunctional.curie}}</td>
-               <td>{{row.transitive.curie}}</td>
-               <td>{{row.symmetric.curie}}</td>
-               <td>{{row.asymmetric.curie}}</td>
-               <td>{{row.reflexibe.curie}}</td>
-               <td>{{row.irreflexibe.curie}}</td>
+               {%if row.functional%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.inversefunctional%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.transitive%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.symmetric%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.asymmetric%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.reflexible%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+               {%if row.irreflexible%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
             </tr> 
          {% endfor %} 
       </table>
@@ -172,6 +172,107 @@
          <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/property-properties.query"></a>
          <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
       </span>
+
+
+
+
+
+
+
+
+      <table about="#examples_use_of_properties" typeof="dcat:Dataset" class="alignment">
+         <caption property="dcterms:description">The properties used by <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a>, and whether or not they are defined in PROV-O.</caption>
+         <tr>
+            <th>Example</th>
+            <th>Property Used</th>
+            <th>Property in PROV-O</th>
+         <tr>
+         {% for row in models.examples_use_of_properties %} 
+            <tr>
+               <td><a href="{{row.dataset.value}}">{{row.num.value}}</a></td>
+               <td>{{row.property.curie}}</td>
+               {%if row.uses%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+            </tr> 
+         {% endfor %} 
+      </table>
+      <span about="#examples_use_of_properties">
+         <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/examples_use_of_properties.query"></a>
+         <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
+      </span>
+
+
+
+
+
+
+
+      <table about="#examples_use_of_classes" typeof="dcat:Dataset" class="alignment">
+         <caption property="dcterms:description">The classes used by <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a>, and whether or not they are defined in PROV-O.</caption>
+         <tr>
+            <th>Example</th>
+            <th>Class Used</th>
+            <th>Class in PROV-O</th>
+         <tr>
+         {% for row in models.examples_use_of_classes %} 
+            <tr>
+               <td><a href="{{row.dataset.value}}">{{row.num.value}}</a></td>
+               <td>{{row.type.curie}}</td>
+               {%if row.uses%}<td style="background: LightGreen">Yes</a></td>{%else%}<td style="background: crimson">No</td>{%endif%}
+            </tr> 
+         {% endfor %} 
+      </table>
+      <span about="#examples_use_of_classes">
+         <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/examples_use_of_classes.query"></a>
+         <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
+      </span>
+
+
+
+
+
+      <table about="#provo_instantiated_classes" typeof="dcat:Dataset" class="alignment">
+         <caption property="dcterms:description">The classes defined by PROV-O, and the number of instances that occur in  <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a>.</caption>
+         <tr>
+            <th>Class in PROV-O</th>
+            <th>Number instances in <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a></th>
+         <tr>
+         {% for row in models.provo_instantiated_classes %} 
+            <tr>
+               <td>{{row.type.curie}}</td>
+               {%if row.count.value != "0"%}<td style="background: LightGreen">{{row.count.value}}</a></td>{%else%}<td style="background: crimson">{{row.count.value}}</td>{%endif%}
+            </tr> 
+         {% endfor %} 
+      </table>
+      <span about="#provo_instantiated_classes">
+         <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/provo_instantiated_classes.query"></a>
+         <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
+      </span>
+
+
+
+
+
+
+
+
+      <table about="#provo_instantiated_properties" typeof="dcat:Dataset" class="alignment">
+         <caption property="dcterms:description">The properties defined by PROV-O, and the number of instances that occur in  <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a>.</caption>
+         <tr>
+            <th>Class in PROV-O</th>
+            <th>Number instances in <a href="http://www.w3.org/2011/prov/wiki/PROV_examples">examples/</a></th>
+         <tr>
+         {% for row in models.provo_instantiated_properties %} 
+            <tr>
+               <td>{{row.property.curie}}</td>
+               {%if row.count.value != "0"%}<td style="background: LightGreen">{{row.count.value}}</a></td>{%else%}<td style="background: crimson">{{row.count.value}}</td>{%endif%}
+            </tr> 
+         {% endfor %} 
+      </table>
+      <span about="#provo_instantiated_properties">
+         <a rel="prov:tracedTo" href="https://raw.github.com/timrdf/prov-lodspeakr/master/components/services/provrdf-owl-coverage/queries/provo_instantiated_properties.query"></a>
+         <span property="dcterms:modified" content="{{first.modified.modified.value}}" datatype="xsd:dateTime"></span>
+      </span>
+
 
 
 
